# pico2-freertos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openocd.cfg
port/FreeRTOS-Kernel/: FreeRTOSConfig.h
src/: main.cpp
